Solucionado el TRY-CATCH al mostrar un usuario con ciudad invalida #3456

--- a/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
@@ -11,6 +11,7 @@
             'frameWidth':   600,
             'frameHeight':  500,
         });
+        zebra('datos_tabla');
       });
 
       function responder(){
