mensaje automatico generado para el sql.rev184

--- a/intranet/htdocs/intranet-tmpl/admin/global/preferencias.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/preferencias.tmpl
@@ -393,6 +393,7 @@ $(document).ready( function() {
                                                                     boton   => "boton_buscar",
                                                                     onClick => "buscarPreferencia();",
                                                                     title   => "[% 'Buscar' | i18n %]",
+                                                                    inline  => 1,
                                         ) ;
             [% END %]
         
@@ -401,6 +402,7 @@ $(document).ready( function() {
                                                                     boton   => "boton_borrar",
                                                                     onClick => "limpiar();",
                                                                     title   => "[% 'Limpiar' | i18n %]",
+                                                                    inline  => 1,
                                         ) ;
             [% END %]
         </li>
