--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalleEjemplar.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalleEjemplar.tmpl
@@ -2,6 +2,7 @@
 [% INCLUDE 'datePicker.inc' %]
 
 <script>
+var AUTO_GENERAR_COMPROBANTE = '[% auto_generar_comprobante_prestamo %]';
     //2 objetos AJAX para que funcionen los paginadores a la vez en el mismo tmpl
     var objAH,objAHCirculacion;
     function changePage(ini){
