--- a/intranet/htdocs/intranet-tmpl/circ/circulacionRapida.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/circulacionRapida.tmpl
@@ -8,7 +8,9 @@
 
 <script type="text/javascript">
 // para la ventana de Agregar Autorizado
-NRO_SOCIO_AUTH=0;
+var AUTO_GENERAR_COMPROBANTE = '[% auto_generar_comprobante_prestamo %]';
+
+var NRO_SOCIO_AUTH=0;
 var objAH;
 
 function clear_usuario(){
