--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/agregarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/agregarUsuario.tmpl
@@ -51,7 +51,7 @@
             [% END %]
 </legend>
 
-<form method="post" name="userDataForm" id="userDataForm" onsubmit="return save();">
+<form method="post" name="userDataForm" id="userDataForm" onsubmit="return [% IF addBorrower == 1 %] add(); [% ELSE %] save_modif(); [% END %]">
     <fieldset>
 	    <legend class="titulo_legend">[% "Datos personales del usuario" | i18n %]</legend>
 	    <ul>
@@ -119,7 +119,7 @@
 		<li class="sub_item">
 		 <label for="codigo_postal">[% "C&oacute;digo Postal" | i18n %]</label>
 		  <input type="number" min="0" name="codigo_postal"  id="codigo_postal" placeholder='[% "C&oacute;digo postal" | i18n %]'  
-		         size="25" value="[% codigo_postal %]" required>
+		         size="25" value="[% codigo_postal %]">
 		</li>
 		<li class="sub_item">
 		     <label for="ciudad"> [% "Ciudad" | i18n %] * </label>
