--- a/opac/htdocs/opac-tmpl/includes/opac-structure.css
+++ b/opac/htdocs/opac-tmpl/includes/opac-structure.css
@@ -2930,7 +2930,59 @@ fieldset {
 }
 
 .server_name {
-    font-size: 14px;
+    font-size: 18px;
     font-weight: bold;
     width: 100%;
+}
+
+
+
+
+/* TABLAS PARA RESULTADOS EXTERNOS --- DIVIDIR CON OPAC.CSS */
+
+table.external_results{
+      font-family: "Trebuchet MS", sans-serif;
+      font-size: 16px;
+      font-weight: bold;
+      line-height: 1.4em;
+      font-style: normal;
+      border-collapse:separate;
+}
+
+.external_results thead th{
+      padding:15px;
+      color:#fff;
+      text-shadow:1px 1px 1px #568F23;
+      border:1px solid #93CE37;
+      border-bottom:3px solid #9ED929;
+	background: #111;
+	background: -moz-linear-gradient(#015A96, #448FC2) repeat scroll 0 0 transparent;
+	background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #448FC2), color-stop(1, #015A96) );
+	background: -webkit-linear-gradient(#015A96, #448FC2);
+	background: -o-linear-gradient(#015A96, #448FC2);
+	background: -ms-linear-gradient(#015A96, #448FC2);
+	background: linear-gradient(#015A96, #448FC2);
+      -webkit-border-top-left-radius:5px;
+      -webkit-border-top-right-radius:5px;
+      -moz-border-radius:5px 5px 0px 0px;
+      border-top-left-radius:5px;
+      border-top-right-radius:5px;
+}
+
+.external_results thead th:empty{
+    background:transparent;
+    border:none;
+}
+
+.external_results tbody td{
+    padding:10px;
+    text-align:center;
+    background-color:#DEF3CA;
+    border: 1px solid #E7EFE0;
+    -moz-border-radius:2px;
+    -webkit-border-radius:2px;
+    border-radius:2px;
+    color:#666;
+    font-size: 12px;
+    text-shadow:1px 1px 1px #fff;
 }
