mensaje automatico generado para el sql.rev185

--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -7,6 +7,7 @@
 <link rel="stylesheet" type="text/css" href="[% temas %]/[% tema %]/includes/css/fancybox/jquery.fancybox.css">
 <script src="/includes/jquery/jquery.charCount.js"></script>
 <script type="text/javascript" src="/includes/jquery/jquery.wysiwyg.js"></script>
+<script type="text/javascript" src="/includes/jquery/jquery.livetwitter.js"></script>
 <link rel="stylesheet" href="/includes/css/wysiwyg.css" type="text/css" media="screen"/>
 
 <script type="text/javascript">
@@ -26,6 +27,12 @@
         $("#button_twitter").hover(twitter_hover, twitter_normal);
  
         $("#button_twitter").click(twitter_click);
+        
+        [% IF twitter_enabled %]
+	        $('#tweets').liveTwitter('[% twitter_username %]', {limit: 5, imageSize: 32}, function(){
+	            $('#tweets .loading').remove();
+	        });
+        [% END %]
         
       });
   
@@ -132,6 +139,7 @@
 	<a class="fancy_link" href="[% url_prefix %]/admin/publicar_twitter.pl?token=[% token %]" > 
 	  <img id="button_twitter" src="[% temas %]/[% tema %]/imagenes/botones/button_twitter_normal.png" alt="Twitter"/>
 	</a>
+	<div id="tweets" class="tweets"><div class="loading">[% 'Loading tweets...' | i18n %]</div></div>
 [% END %]
   
 [% INCLUDE 'intranet-bottom.inc' %]
