--- a/intranet/htdocs/intranet-tmpl/temas/DEO/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/DEO/includes/completo.css
@@ -5653,6 +5653,7 @@ button.thoughtbot:active {
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px;
     max-width: 300px;
+    margin: 0 auto;
 }
 .tweets .loading {
     padding: 10px 20px;
@@ -5688,4 +5689,8 @@ button.thoughtbot:active {
     white-space: nowrap;
     text-decoration: none;
     padding-left: 8px;
+}
+
+#twitter_container{
+	width: 360px
 }
