--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -139,9 +139,9 @@
 <!-- <div id="twitter_container"> -->
 <!-- 	<div id="tweets" class="tweets"><div class="loading">[% 'Cargando tweets...' | i18n %]</div></div> -->
 <!-- 	<br /> -->
-<!--     <a class="fancy_link" href="[% url_prefix %]/admin/publicar_twitter.pl?token=[% token %]" >  -->
-<!--       <img id="button_twitter" src="[% temas %]/[% tema %]/imagenes/botones/button_twitter_normal.png" alt="Twitter"/> -->
-<!--     </a> -->
+    <a class="fancy_link" href="[% url_prefix %]/admin/publicar_twitter.pl?token=[% token %]" > 
+      <img id="button_twitter" src="[% temas %]/[% tema %]/imagenes/botones/button_twitter_normal.png" alt="Twitter"/>
+    </a>
 <!-- </div> -->
 [% END %]
   
