--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -151,7 +151,7 @@
 	                        [% END %]
 		                
                            <div id="indice_data[% id2 %]" style="display:none">
-                            <p style="padding:20px;">[% indice %]</p>
+                            <pre>[% indice %]</pre>
                           </div>
 
 		                <div>
