--- a/intranet/htdocs/intranet-tmpl/temas/DEO/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/DEO/includes/completo.css
@@ -5694,3 +5694,23 @@ button.thoughtbot:active {
 #twitter_container{
 	width: 360px
 }
+
+#unique_modify_value {
+	width: 50%;
+	height: 35px;
+	padding: 5px 20px 0px 20px;
+	margin: 0 auto;
+	background: #5E768D;
+	background: -moz-linear-gradient(top, #546A7F 0%, #5E768D 20%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#546A7F), color-stop(20%,#5E768D));
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-box-shadow: 0px 1px 0px #f2f2f2;
+	-webkit-box-shadow: 0px 1px 0px #f2f2f2;
+	font-family: sans-serif;
+	font-size: 16px;
+	color: #F2F2F2;
+	text-transform: uppercase;
+	text-shadow: 0px -1px 0px #334F71;
+}
