--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -29,9 +29,9 @@
         $("#button_twitter").click(twitter_click);
         
         [% IF twitter_enabled %]
-	        $('#tweets').liveTwitter('[% twitter_username_to_search %]', {limit: 5, imageSize: 32}, function(){
-	            $('#tweets .loading').remove();
-	        });
+// 	        $('#tweets').liveTwitter('[% twitter_username_to_search %]', {limit: 5, imageSize: 32}, function(){
+// 	            $('#tweets .loading').remove();
+// 	        });
         [% END %]
         
       });
@@ -137,7 +137,7 @@
 
 [% IF twitter_enabled %]
 <div id="twitter_container">
-	<div id="tweets" class="tweets"><div class="loading">[% 'Cargando tweets...' | i18n %]</div></div>
+<!-- 	<div id="tweets" class="tweets"><div class="loading">[% 'Cargando tweets...' | i18n %]</div></div> -->
 	<br />
     <a class="fancy_link" href="[% url_prefix %]/admin/publicar_twitter.pl?token=[% token %]" > 
       <img id="button_twitter" src="[% temas %]/[% tema %]/imagenes/botones/button_twitter_normal.png" alt="Twitter"/>
