[CHANGELOG] Ahora se tiene un formato de Barcodes para cada tipo de documento en Administracion/Catalogo/Generacion de Barcodes

--- a/intranet/htdocs/intranet-tmpl/reports/users-cards.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/users-cards.tmpl
@@ -46,6 +46,7 @@
 
     function updateInfo(responseText){
         $("#result").html(responseText);
+        scrollTo("result");
         zebra("datos_tabla");
     }
 
