--- a/intranet/htdocs/intranet-tmpl/catalogacion/configuracion/barcode_gen_setup.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/configuracion/barcode_gen_setup.tmpl
@@ -4,6 +4,7 @@
 
 [% INCLUDE  'AutocompleteHelper.inc'  %] 
 
+
 <script>
 	//Init Form
 	var objAH; //Objeto AjaxHelper.
@@ -11,7 +12,7 @@
 	function eleccionDeBarcodeFormat(){
 	    objAH               = new AjaxHelper(updateEleccionDeBarcodeFormat);
 	    objAH.debug         = true;
-	    objAH.cache         = true;
+	    objAH.cache         = false;
 	    objAH.showOverlay   = true;
 	    objAH.url           = URL_PREFIX+'/admin/catalogo/barcode_gen_setup.pl';
 	    objAH.id_tipo_doc   = $('#tipo_nivel3_id').val();
@@ -20,19 +21,41 @@
 	    objAH.sendToServer();
 	}
 
-	/*
-	 * updateInfoUsuario
-	 * Funcion que se realiza cuando se completa la consulta ajax de detalleUsuario, muestra los datos del usuario.
-	 */
 	function updateEleccionDeBarcodeFormat(responseText){
 	    $('#result').slideDown('slow');
 	    //se borran los mensajes de error/informacion del usuario
 	    $('#result').html(responseText);
 	}
 	
+
 	
+   function actualizarBarcode(){
+        objAH                = new AjaxHelper(updateActualizarBarcode);
+        objAH.debug          = true;
+        objAH.cache          = false;
+        objAH.showOverlay    = true;
+        objAH.url            = URL_PREFIX+'/admin/catalogo/barcode_gen_setup.pl';
+        objAH.id_tipo_doc    = $('#tipo_nivel3_id').val();
+        objAH.barcode_format =$('#unique_modify_value').val();
+        objAH.tipoAccion     = "MODIFICACION_BARCODE";
+        //se envia la consulta
+        objAH.sendToServer();
+    }
+
+    function updateActualizarBarcode(responseText){
+        var Messages=JSONstring.toObject(responseText);
+        setMessages(Messages);
+    }
 	
-	
+    function searchKeyPress(e)
+    {
+         // look for window.event in case event isn't passed in
+         if (window.event) { e = window.event; }
+         if (e.keyCode == 13)
+         {
+             document.getElementById('unique_modify_button').click();
+         }
+    }	
 	
 	$(document).ready(function() {
 	});
@@ -40,7 +63,7 @@
 
 <input type="hidden" id="idEncabezado">
 
-<div class="titulos" >[% 'Configurac&oacute;n de formatos de Barcode' | i18n %]</div>
+<div class="titulos" >[% 'Configuraci&oacute;n de formatos de Barcode' | i18n %]</div>
 
 <fieldset>
     <legend><strong>[% "Seleccione el tipo de documento a configurar:" | i18n %]</strong></legend>
@@ -53,8 +76,11 @@
                     ) ;
     [% END %]
     [% selectItemType %]
+    
+    <div id="result"></div>
+
 </fieldset>
 
-<div id="result"></div>
+
 
 [% INCLUDE "intranet-bottom.inc" %]
