--- a/intranet/htdocs/intranet-tmpl/includes/partials/modificar_value_input.tmpl
+++ b/intranet/htdocs/intranet-tmpl/includes/partials/modificar_value_input.tmpl
@@ -1,2 +1,9 @@
-<input id="unique_modify_value" type="text" placeholder="[% 'FIELD,SEPARATOR,FIELD,STRING,etc.' | i18n %]" value="[% value %]" />
-<input type="hidden" id="edit" name="edit" value="1" />
+<br />
+<br />
+
+<div style="width:80%; margin: 0 auto;" id="div_container_modify_value">
+    <label for="unique_modify_value">[% 'Formato de Inventario para ' | i18n %] [% tipo_doc %]</label>
+	<input id="unique_modify_value" type="text" placeholder="[% 'SIN FORMATO' | i18n %]" value="[% value %]" onkeypress="searchKeyPress();" />
+	<input type="hidden" id="edit" name="edit" value="1" />
+	<button class="clean-gray" onclick="[% function %]" id="unique_modify_button">[% 'Actualizar formato' | i18n %]</button>
+</div>
