--- a/intranet/htdocs/intranet-tmpl/temas/DEO/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/DEO/includes/completo.css
@@ -1460,8 +1460,8 @@ ul.listado_a_izquierda {
 	margin-left: 7px;
 }
 
-.listaMenuBotones li button{
-    width: 300px;
+.listaMenuBotones li button {
+	width: 300px;
 }
 
 .listaCondicionesHorizontales {
@@ -1638,7 +1638,7 @@ input.file {
 	position: relative;
 	text-align: right;
 	-moz-opacity: 0;
-	filter: alpha(opacity :     0);
+	filter: alpha(opacity :       0);
 	opacity: 0;
 	z-index: 2;
 }
@@ -2923,8 +2923,8 @@ ul {
 	list-style: disc outside none;
 }
 
-li {
-/* 	margin-left: 30px; */
+li { /* 	margin-left: 30px; */
+	
 }
 
 b,strong {
@@ -5243,23 +5243,23 @@ li.impar {
 
 /*hover de las tablas con checkbox*/
 .impar:hover {
-    background:         #5C82B5;
-    color:              #000000;
+	background: #5C82B5;
+	color: #000000;
 }
 
 .par:hover {
-    background:         #5C82B5;
-    color:              #000000;
+	background: #5C82B5;
+	color: #000000;
 }
 
 .impar.marked:hover {
-    background:         #5C82B5;
-    color:              #000000;
+	background: #5C82B5;
+	color: #000000;
 }
 
 .par.marked:hover {
-    background:         #5C82B5;
-    color:              #000000;
+	background: #5C82B5;
+	color: #000000;
 }
 
 .par.marked {
@@ -5648,50 +5648,56 @@ button.thoughtbot:active {
 }
 
 .tweets {
-    background: #444;
-    padding: 1px 5px;
-    -moz-border-radius: 8px;
-    -webkit-border-radius: 8px;
-    max-width: 300px;
-    margin: 0 auto;
+	background: #444;
+	padding: 1px 5px;
+	-moz-border-radius: 8px;
+	-webkit-border-radius: 8px;
+	max-width: 300px;
+	margin: 0 auto;
 }
+
 .tweets .loading {
-    padding: 10px 20px;
-    color: #ccc;
+	padding: 10px 20px;
+	color: #ccc;
 }
 
 .tweet {
-    font-size: 13px;
-    background: #fff;
-    margin: 4px 0;
-    padding: 8px;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-}
-.tweet img {
-    float: left;
-}
-.tweet .text {
-    margin: 0;
-    margin-left: 44px;
-}
-.tweet .username {
-    display: block;
-}
-.tweet .username a {
-    font-weight: bold;
-    text-decoration: none;
-    color: #111;
-}
-.tweet .time a {
-    font-size: 80%;
-    color: #888;
-    white-space: nowrap;
-    text-decoration: none;
-    padding-left: 8px;
+	font-size: 13px;
+	background: #fff;
+	margin: 4px 0;
+	padding: 8px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
 }
 
-#twitter_container{
+.tweet img {
+	float: left;
+}
+
+.tweet .text {
+	margin: 0;
+	margin-left: 44px;
+}
+
+.tweet .username {
+	display: block;
+}
+
+.tweet .username a {
+	font-weight: bold;
+	text-decoration: none;
+	color: #111;
+}
+
+.tweet .time a {
+	font-size: 80%;
+	color: #888;
+	white-space: nowrap;
+	text-decoration: none;
+	padding-left: 8px;
+}
+
+#twitter_container {
 	width: 360px
 }
 
@@ -5702,7 +5708,8 @@ button.thoughtbot:active {
 	margin: 0 auto;
 	background: #5E768D;
 	background: -moz-linear-gradient(top, #546A7F 0%, #5E768D 20%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#546A7F), color-stop(20%,#5E768D));
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #546A7F),
+		color-stop(20%, #5E768D) );
 	border-radius: 5px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
@@ -5713,4 +5720,14 @@ button.thoughtbot:active {
 	color: #F2F2F2;
 	text-transform: uppercase;
 	text-shadow: 0px -1px 0px #334F71;
+}
+
+#div_container_modify_value label {
+	float: left;
+	clear: left;
+	margin: 11px 20px 0 0;
+	text-align: right;
+	font-size: 16px;
+	color: #445668;
+	text-shadow: 0px 1px 0px #f2f2f2;
 }
