mensaje automatico generado para el sql.rev189

--- a/intranet/htdocs/intranet-tmpl/circ/circulacionRapida.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/circulacionRapida.tmpl
@@ -82,6 +82,9 @@ function obtenerDatosDelEjemplar(){
 
 function updateObtenerDatosDelEjemplar(responseText){
     $('#datos_ejemplar').html(responseText);
+    if (responseText == ""){
+    	alert ([% "Hubo un problema con el ejemplar" | i18n %]);
+    }
 }
 
 function updateObtenerTiposDePrestamos(responseText){
