--- a/intranet/htdocs/intranet-tmpl/temas/DEO/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/DEO/includes/completo.css
@@ -1,8 +1,6 @@
 @IMPORT url("../../../intranet-structure.css");
 @IMPORT url("forms.css");
-
 @IMPORT url("/includes/css/fancybox.css");
-
 @IMPORT url("menu.css");
 
 body,html {
@@ -517,7 +515,6 @@ label.error_adv {
 .boton_exportar_marc {
 	background: transparent url(../imagenes/botones/boton_exportar_marc.png)
 		no-repeat;
-	
 }
 
 .icon_bajar {
@@ -691,8 +688,6 @@ label.error_adv {
 	line-height: 1.5em;
 }
 
-/* //////// HASTA ACA REVISADO*/
-
 .resultados_consulta {
 	font-weight: bold;
 	font-family: Arial, Helvetica, sans-serif;
@@ -759,8 +754,8 @@ label.error_adv {
 	margin-left: 7px;
 }
 
-<<<<<<< HEAD
-=======
+/*  fbfdñlgkñldfkgñldfkglñdfkñlgkñl */
+
 .listaMenuBotones li button {
 	width: 300px;
 }
@@ -786,7 +781,8 @@ label {
 	width: auto;
 }
 
->>>>>>> 40e8dc8396d2154d0ba339d175b714914122b58e
+
+/*  dfgdfgdfgdfgdf */
 .toggle_container {
 	background: #F0F0F0;
 	border-top: 1px solid #D6D6D6;	
@@ -843,7 +839,7 @@ h2.trigger {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
-/* 11111111111111111111111111111111111111 */
+
 
 .titulo_legend_warning {
 	font-weight: bold;
@@ -863,10 +859,8 @@ input.file {
 	border: 0;
 }
 
-<<<<<<< HEAD
-#me_name {
-	color: #4B5869;
-=======
+/* 11111111111111111111111111111111111111 */
+
 div.fakefile {
 	margin-top: -24px;
 	z-index: 1;
@@ -923,9 +917,9 @@ input.file {
 	color: #4B5869;
 	float: left;
 	padding-left: 2px;
->>>>>>> 40e8dc8396d2154d0ba339d175b714914122b58e
 }
 
+ /* 11111111111111111111111111111111111111 */ 
 .url {
 	border: none;
 	text-decoration: none;
@@ -997,6 +991,7 @@ div.pagination span.disabled {
 .strong {
 	font-weight: bold;
 }
+
 
 #tooltip {
 	border: 1px solid #111;
@@ -2297,9 +2292,10 @@ form.signin .textbox input:hover,form.signin .textbox input:focus,form.signin .t
 
 
 #top-bar-bg {
-	background: #35414F;
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+    background: #35414F;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
+
 
 #top-bar ul li a {
 	color: #BABABA;
