--- a/intranet/htdocs/intranet-tmpl/circ/circulacionRapida.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/circulacionRapida.tmpl
@@ -83,7 +83,7 @@ function obtenerDatosDelEjemplar(){
 function updateObtenerDatosDelEjemplar(responseText){
     $('#datos_ejemplar').html(responseText);
     if (responseText == ""){
-    	alert ([% "Hubo un problema con el ejemplar" | i18n %]);
+    	alert ('[% "Hubo un problema con el ejemplar" | i18n %]');
     }
 }
 
