--- a/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
@@ -10,6 +10,7 @@
       $(document).ready(function() {
         makeToggle('datos_tabla_div','trigger',null,false);
         $('.fancylink').fancybox();
+        disableAlert();
       });
 </script>
 <fieldset class="resultados_busqueda">
