--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuarioResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuarioResult.tmpl
@@ -3,6 +3,7 @@
       $(document).ready(function() {
           makeToggle('datos_tabla_div_user','trigger',null,false);
           $('.user_pic_fancy').fancybox();
+          disableAlert();
       });
 </script>
 
