--- a/opac/htdocs/opac-tmpl/includes/opac-structure.css
+++ b/opac/htdocs/opac-tmpl/includes/opac-structure.css
@@ -2986,3 +2986,7 @@ table.external_results{
     font-size: 12px;
     text-shadow:1px 1px 1px #fff;
 }
+
+.li_items_indice{
+  font-size: 14px;
+}
