--- a/intranet/htdocs/intranet-tmpl/circ/mostrarDatosEjemplar.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/mostrarDatosEjemplar.tmpl
@@ -18,31 +18,37 @@
             <div class="sub_item_data">[% 'Estado:' | i18n %]</div>
             <div class="sub_item_data_right">
                     [% IF socio_prestamo %]
-                        <strong class="[% IF nivel3.estadoDisponible %]disponible[% ELSE %]nodisponible[% END %]">[% 'Prestado a:' | i18n  %]</strong> 
+                        <strong class="[% IF nivel3.estadoDisponible %]disponible[% ELSE %]nodisponible[% END %]">[% 'Prestado a:' | i18n  %]</strong>
                         [% PERL %]
                             print C4::AR::Filtros::link_to(   text =>     "[% socio_prestamo.persona.getApeYNom %]",
-                                                              url=>"[% url_prefix %]/usuarios/reales/datosUsuario.pl", 
+                                                              url=>"[% url_prefix %]/usuarios/reales/datosUsuario.pl",
                                                               params =>   ["nro_socio=[% socio_prestamo.getNro_socio %]"],
                                                               title =>    "[% 'Mostrar Detalle del Usuario' | i18n %]",
                                                               blank =>  1,
                                                         );
                         [% END %]
+                        <script>
+                            //Actualizamos los datos del usuario
+                            $('#nro_socio_hidden').val('[% socio_prestamo.getNro_socio %]');
+                            $('#usuario').val('[% socio_prestamo.persona.getApeYNom %] ([% socio_prestamo.getNro_socio %])');
+                            onCompleteUsuarios();
+                        </script>
                     [% ELSE %]
                         <strong class="[% IF nivel3.estadoDisponible %]disponible[% ELSE %]nodisponible[% END %]">[% nivel3.getEstadoObject.getNombre  %]</strong>
                     [% END %]
                     [% IF socio_reserva %]
-                        [% 'Reservado a:' | i18n  %] 
+                        [% 'Reservado a:' | i18n  %]
                         <strong>
                         [% PERL %]
                             print C4::AR::Filtros::link_to(   text =>     "[% socio_reserva.persona.getApeYNom %]",
-                                                              url=>"[% url_prefix %]/usuarios/reales/datosUsuario.pl", 
+                                                              url=>"[% url_prefix %]/usuarios/reales/datosUsuario.pl",
                                                               params =>   ["nro_socio=[% socio_reserva.getNro_socio %]"],
                                                               title =>    "[% 'Mostrar Detalle del Usuario' | i18n %]",
                                                               blank =>  1,
                                                         );
                         [% END %]
                         </strong>
-                    [% END %]          
+                    [% END %]
             </div>
         </li>
         </ul>
