se quito el ajax overlay cuando se muestran los mensajes de contacto en el main de la intranet

--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -51,6 +51,7 @@
     function mensajesContacto(){
         objAH               = new AjaxHelper(updateMensajesContacto);
         objAH.debug         = true;
+        objAH.offIndicator  = 1; 
         objAH.url           = URL_PREFIX+'/mensajes_contacto.pl';
         objAH.sendToServer();
     }
