--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -51,7 +51,7 @@
     function mensajesContacto(){
         objAH               = new AjaxHelper(updateMensajesContacto);
         objAH.debug         = true;
-        objAH.offIndicator  = 1; 
+        objAH.offIndicator  = true; 
         objAH.url           = URL_PREFIX+'/mensajes_contacto.pl';
         objAH.sendToServer();
     }
